# worldcal

./: .gitignore  .gitpod.Dockerfile  .gitpod.yml  README.md
.github/workflows/: deploy_calendar_index.yml  deploy_index.yml  deploy_muncher.yml  deploy_spider.yml
calendar_index/: Dockerfile  docker-compose.yaml  fly.toml  pyproject.toml  start.sh
calendar_index/calendar_index/: __main__.py  anthropic_scraper.py  calendar_index.py  event.py  find_dates.py  gemini_scraper.py  storage.py  utils.py
calendar_index/critiquer/: critiquer.py  fly.toml  handler.py
calendar_index/database/: spider.sql  tables.sql
calendar_index/domain_classifier/: domain_classifier.py  extract_labels.py  fly.toml  models.py  storage.py
calendar_index/labeller/: extract_labels.py  fly.toml  labeller.py  models.py  storage.py
calendar_index/labs/: WorldCal_Spider.ipynb  data_export.ipynb
calendar_index/muncher/: anthropic_scraper.py  event.py  find_dates.py  fly.toml  gemini_scraper.py  muncher.py  storage.py  utils.py
calendar_index/scheduler/: scheduler.py  storage.py
calendar_index/spider/: extract_urls.py  fly.toml  models.py  spider.py  storage.py  utils.py
calendar_index/wikipedia_classifier/: classifier.py  database.py  fly.toml  wikipedia_classifier.py
calendar_index/wikipedia_muncher/: database.py  extract_events.py  fly.toml  wikipedia_muncher.py
calendar_index/wikipedia_spider/: extract_labels.py  extract_urls.py  fly.toml  models.py  storage.py  utils.py  wikipedia_spider.py
landingpage/: Dockerfile  fly.toml  package.json  start.sh  tailwind.config.ts
(+2 files in other folders)
