[tool.poetry]
name = "calendar-index"
version = "0.1.0"
description = ""
authors = ["Damian Akpan <damiakpan@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
prefect = "^2.16.9"
trafilatura = "^1.8.1"
openai = "^1.16.2"
langchain-text-splitters = "^0.0.1"
anthropic = "^0.23.1"
tenacity = "^8.2.3"
duckdb = "^0.10.1"
wikipedia = "^1.4.0"
google-generativeai = "^0.4.1"
pydantic = "^2.6.4"
psycopg2-binary = "^2.9.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
